--- a/css/css.css
+++ b/css/css.css
@@ -1,12 +1,18 @@
 @font-face {
-  font-family: 'Nunito';
+  font-family: 'Source Sans Pro';
   font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/XRXI3I6Li01BKofiOc5wtlZ2di8HDLshdTQ3ig.ttf) format('truetype');
+  font-weight: 300;
+  src: url(../fonts/6xKydSBYKcSV-LCoeQqfX1RYOo3ik4zwlxdr.ttf) format('truetype');
 }
 @font-face {
-  font-family: 'Nunito';
+  font-family: 'Source Sans Pro';
+  font-style: normal;
+  font-weight: 400;
+  src: url(../fonts/6xK3dSBYKcSV-LCoeQqfX1RYOo3qOK7g.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Source Sans Pro';
   font-style: normal;
   font-weight: 700;
-  src: url(../fonts/XRXI3I6Li01BKofiOc5wtlZ2di8HDFwmdTQ3ig.ttf) format('truetype');
+  src: url(../fonts/6xKydSBYKcSV-LCoeQqfX1RYOo3ig4vwlxdr.ttf) format('truetype');
 }
