--- a/css/css_1.css
+++ b/css/css_1.css
@@ -1,18 +1,12 @@
 @font-face {
-  font-family: 'Source Sans Pro';
-  font-style: normal;
-  font-weight: 300;
-  src: url(../fonts/6xKydSBYKcSV-LCoeQqfX1RYOo3ik4zwlxdr.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Source Sans Pro';
+  font-family: 'Nunito Sans';
   font-style: normal;
   font-weight: 400;
-  src: url(../fonts/6xK3dSBYKcSV-LCoeQqfX1RYOo3qOK7g.ttf) format('truetype');
+  src: url(../fonts/pe0qMImSLYBIv1o4X1M8cce9I94.ttf) format('truetype');
 }
 @font-face {
-  font-family: 'Source Sans Pro';
+  font-family: 'Nunito Sans';
   font-style: normal;
   font-weight: 700;
-  src: url(../fonts/6xKydSBYKcSV-LCoeQqfX1RYOo3ig4vwlxdr.ttf) format('truetype');
+  src: url(../fonts/pe03MImSLYBIv1o4X1M8cc8GBs5tU1Q.ttf) format('truetype');
 }
