--- a/css/css_2.css
+++ b/css/css_2.css
@@ -1,12 +1,12 @@
 @font-face {
-  font-family: 'Lato';
+  font-family: 'Nunito';
   font-style: normal;
   font-weight: 400;
-  src: url(../fonts/S6uyw4BMUTPHjx4wWw.ttf) format('truetype');
+  src: url(../fonts/XRXI3I6Li01BKofiOc5wtlZ2di8HDLshdTQ3ig.ttf) format('truetype');
 }
 @font-face {
-  font-family: 'Lato';
+  font-family: 'Nunito';
   font-style: normal;
   font-weight: 700;
-  src: url(../fonts/S6u9w4BMUTPHh6UVSwiPHA.ttf) format('truetype');
+  src: url(../fonts/XRXI3I6Li01BKofiOc5wtlZ2di8HDFwmdTQ3ig.ttf) format('truetype');
 }
