--- a/css/css_3.css
+++ b/css/css_3.css
@@ -1,12 +1,12 @@
 @font-face {
-  font-family: 'Nunito';
+  font-family: 'Nunito Sans';
   font-style: normal;
   font-weight: 400;
-  src: url(../fonts/XRXI3I6Li01BKofiOc5wtlZ2di8HDLshdTQ3ig.ttf) format('truetype');
+  src: url(../fonts/pe0qMImSLYBIv1o4X1M8cce9I94.ttf) format('truetype');
 }
 @font-face {
-  font-family: 'Nunito';
+  font-family: 'Nunito Sans';
   font-style: normal;
   font-weight: 700;
-  src: url(../fonts/XRXI3I6Li01BKofiOc5wtlZ2di8HDFwmdTQ3ig.ttf) format('truetype');
+  src: url(../fonts/pe03MImSLYBIv1o4X1M8cc8GBs5tU1Q.ttf) format('truetype');
 }
